--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Odin Recipes</h1>
     
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/boiled_water.html">Boiled Water</a></li>
+        <li><a href="./recipes/boiled_water.html">Ice Cubes</a></li>
     </ul>
 </body>
 </html>
