Add new recipe in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <ul>
         <li><a href="./recipes/boiled_water.html">Boiled Water</a></li>
-        <li><a href="./recipes/boiled_water.html">Ice Cubes</a></li>
+        <li><a href="./recipes/ice_cubes.html">Ice Cubes</a></li>
     </ul>
 </body>
 </html>
