Add contents in boiled_water.html

--- a/recipes/boiled_water.html
+++ b/recipes/boiled_water.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     <h1>Boiled Water</h1>
+    <img src="../images/recipe1.jpg">
+    <p>Boiled water is a water that is boiled. Boiled water is hot when touched</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Water</li>
+        <li>Kettle</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Pour water in the kettle</li>
+        <li>Put the kettle in the stove</li>
+        <li>Wait until water is boiling</li>
+        <li>Serve and enjoy</li>
+    </ol>
 </body>
 </html>
