Add contents in ice_cubes.html

--- a/recipes/ice_cubes.html
+++ b/recipes/ice_cubes.html
@@ -8,5 +8,19 @@
 </head>
 <body>
     <h1>Ice Cubes</h1>
+    <img src="../images/recipe2.jpg">
+    <p>Boiled water is a water that is frozen. Ice cubes is cold when touched</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Water</li>
+        <li>Ice mold</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Pour water in the ice mold</li>
+        <li>Put the ice mold in the freezer</li>
+        <li>Wait until water is hard</li>
+        <li>Serve and enjoy</li>
+    </ol>
 </body>
 </html>
